--- a/about.html
+++ b/about.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>About</title>
-        <link rel="stylesheet" href="bioSite.css" type="text/css" />
-    </head>
-    <header><h1>bioSite</h1></header>
-    <div id="navbar">
-        <h1><a href="landing.html">Home</a></h1>
-        <h1><a href="about.html">About</a></h1>
-        <h1><a href="hobbies.html">Hobbies</a></h1>
-    </div>
-    <div id="container">
-        <div id="content">
-            <div class="card">
-                <img/>
-                <p></p>
+
+<head>
+    <title>About</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="bioSite.css" type="text/css" />
+</head>
+<div id="navbar">
+    <h1><a href="landing.html">Home</a></h1>
+    <h1><a href="about.html">About</a></h1>
+    <h1><a href="hobbies.html">Hobbies</a></h1>
+</div>
+<div id="container">
+    <div id="content">
+        <div class="card">
+            <div class="card-content">
+                <img src="images/graduate.jpg" />
+                <p>Leidy was the first person in her family to gain a bachelor's degree and is proud of her
+                    accomplishment.</p>
             </div>
-           <div class="pane">
-                <p></p>
-           </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+                <img src="images/citizenship.jpg">
+                <p>Becoming a U.S. Citizen was a long-awaited and difficult road but did not deter Leidy from making it
+                    a reality.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+                <img src="images/playground.jpg">
+                <p>Time with her little one is where Leidy spends most of her time and this brings her great joy in
+                    life.s</p>
+            </div>
         </div>
     </div>
-    <footer>
-        Footer
-    </footer>
+</div>
+<footer>
+</footer>
+
 </html>
