--- a/hobbies.html
+++ b/hobbies.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Hobbies</title>
-        <link rel="stylesheet" href="bioSite.css" type="text/css" />
-    </head>
-    <header><h1>bioSite</h1></header>
-    <div id="navbar">
-        <h1><a href="landing.html">Home</a></h1>
-        <h1><a href="about.html">About</a></h1>
-        <h1><a href="hobbies.html">Hobbies</a></h1>
-    </div>
-    <div id="container">
-        <div id="content">
-            <div class="card">
-                <img/>
-                <p></p>
+
+<head>
+    <title>About</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="bioSite.css" type="text/css" />
+</head>
+<div id="navbar">
+    <h1><a href="landing.html">Home</a></h1>
+    <h1><a href="about.html">About</a></h1>
+    <h1><a href="hobbies.html">Hobbies</a></h1>
+</div>
+<div id="container">
+    <div id="content">
+        <div class="card">
+            <div class="card-content">
+                <img src="images/curacao.jpg" />
+                <p>Traveling is a passion that Leidy has always had, and she always is up for an opportunity to visit
+                    someplace new.</p>
             </div>
-           <div class="pane">
-                <p></p>
-           </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+                <img src="images/zumba.jpg">
+                <p>Zumba not only helps Leidy stay fit, but provides an outlet to reconnect with her native country of
+                    Colombia where dancing is the primary activity that most engage in to have fun.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-content">
+                <img src="images/hiking.jpg">
+                <p>Hiking is one form of adventure that Leidy enjoys as it checks the boxes for traveling and thrill
+                    seeking.</p>
+            </div>
         </div>
     </div>
-    <footer>
-        Footer
-    </footer>
+</div>
+<footer>
+</footer>
+
 </html>
