--- a/landing.html
+++ b/landing.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Home</title>
-        <link rel="stylesheet" href="bioSite.css" type="text/css" />
-    </head>
-    <header><h1>bioSite</h1></header>
-    <div id="navbar">
-        <h1><a href="landing.html">Home</a></h1>
-        <h1><a href="about.html">About</a></h1>
-        <h1><a href="hobbies.html">Hobbies</a></h1>
+
+<head>
+    <title>Leidy's Bio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="bioSite.css" type="text/css" />
+</head>
+<div id="navbar">
+    <h1><a href="landing.html">Home</a></h1>
+    <h1><a href="about.html">About</a></h1>
+    <h1><a href="hobbies.html">Hobbies</a></h1>
+</div>
+<div id="container">
+    <div id="banner">
     </div>
-    <div id="container">
-        <div id="banner">
-            <div id="banner-content">
-                <div id="motto"></div>
-                <div id="profile-image"></div>
+    <div id="content">
+        <div class="card">
+            <div class="card-content">
+                <div id="profile-image">
+                    <img src="images/potrait.jpg" />
+                </div>
             </div>
         </div>
-        <div id="content">
-            <div class="card">
-                <img/>
-                <p></p>
-            </div>
-            <div class="card">
-                <img/>
-                <p></p>
-            </div>
-            <div class="card">
-                <img/>
-                <p></p>
+        <div class="card">
+            <div class="card-content">
+                <p>Welcome to the Bio site of Leidy!</p>
             </div>
         </div>
+
     </div>
-    <footer>
-        Footer
-    </footer>
+</div>
+<footer>
+
+</footer>
+
 </html>
