--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="bioSite.css" type="text/css" />
 </head>
 <div id="navbar">
-    <h1><a href="landing.html">Home</a></h1>
+    <h1><a href="index.html">Home</a></h1>
     <h1><a href="about.html">About</a></h1>
     <h1><a href="hobbies.html">Hobbies</a></h1>
 </div>
