--- a/about.html
+++ b/about.html
@@ -8,10 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="bioSite.css" type="text/css" />
 </head>
+<header><h1>Leidy Orban's Bio</h1></header>
 <div id="navbar">
     <h1><a href="index.html">Home</a></h1>
     <h1><a href="about.html">About</a></h1>
     <h1><a href="hobbies.html">Hobbies</a></h1>
+    <h1><a href="https://www.colombia.co/en/" target="_blank">Colombia</a></h1>
 </div>
 <div id="container">
     <div id="content">
@@ -33,12 +35,19 @@
             <div class="card-content">
                 <img src="images/playground.jpg">
                 <p>Time with her little one is where Leidy spends most of her time and this brings her great joy in
-                    life.s</p>
+                    life.</p>
             </div>
         </div>
     </div>
 </div>
 <footer>
+    <p>
+        &#169
+        <script>
+            document.write(new Date().getFullYear());
+        </script>
+        <a href="https://www.bellevue.edu/" target="_blank"> - Bellevue University</a>
+    </p>
 </footer>
 
 </html>
