--- a/hobbies.html
+++ b/hobbies.html
@@ -2,16 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>About</title>
+    <title>Hobbies</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="bioSite.css" type="text/css" />
 </head>
+<header>
+    <h1>Leidy Orban's Bio</h1>
+</header>
 <div id="navbar">
     <h1><a href="index.html">Home</a></h1>
     <h1><a href="about.html">About</a></h1>
     <h1><a href="hobbies.html">Hobbies</a></h1>
+    <h1><a href="https://www.colombia.co/en/" target="_blank">Colombia</a></h1>
 </div>
 <div id="container">
     <div id="content">
@@ -37,8 +41,14 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>
+            &#169
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+            <a href="https://www.bellevue.edu/" target="_blank"> - Bellevue University</a>
+        </p>
+    </footer>
 </div>
-<footer>
-</footer>
-
 </html>
