--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>Leidy's Bio</title>
+    <title>Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="bioSite.css" type="text/css" />
 </head>
+<header>
+    <h1>Leidy Orban's Bio</h1>
+</header>
 <div id="navbar">
     <h1><a href="index.html">Home</a></h1>
     <h1><a href="about.html">About</a></h1>
     <h1><a href="hobbies.html">Hobbies</a></h1>
+    <h1><a href="https://www.colombia.co/en/" target="_blank">Colombia</a></h1>
 </div>
 <div id="container">
     <div id="banner">
@@ -27,13 +31,34 @@
         <div class="card">
             <div class="card-content">
                 <p>Welcome to the Bio site of Leidy!</p>
+                <p>Leidy was born in Manizales, Colombia in South America and lived there until she
+                    moved to the United States in 2017 to marry her fiancé. Her native language is Spanish and she
+                    learned English from both her schooling and in conversation with her boyfriend in the years prior
+                    to coming to the United States.
+                    During her time in Manizales, she lived with her Grandparents for many years when she
+                    was younger and gained her love of animals from her Grandpa, who had many pets and enjoyed
+                    caring for animals. Dancing was also something that was prevalent in both her family and
+                    schooling as she grew up, which is why she loves to do Zumba every week.
+                    Traveling has always been in her spirit and in addition to Panama and Curacao, she has
+                    been all over the country of Colombia and the United States. These adventures are what satisfy
+                    the thrill-seeking that makes her happy and is why she has indicated she wants to paraglide as
+                    one of her bucket lists items.
+                    Leidy is proud of the many accomplishments she has achieved so far throughout her life
+                    and lists being a mother, getting her Bachelors, getting U.S. Citizenship, and spending time
+                    hiking with her husband as the accomplishments and activities she has enjoyed most.</p>
             </div>
         </div>
 
     </div>
+    <footer>
+        <p>
+            &#169
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+            <a href="https://www.bellevue.edu/" target="_blank"> - Bellevue University</a>
+        </p>
+    </footer>
 </div>
-<footer>
-
-</footer>
 
 </html>
